@@ -137,4 +137,5 @@ v0.66-2
   - added material3d, which can both set and query material properties; changed
   - changed open3d() to set background and material defaults
     most *3d functions so they leave material invariant across calls.
-  - added aspect3d to control the aspect ratio of the bounding box
+  - added aspect3d to control the aspect ratio of the bounding box.
+  - added xAxis, yAxis and zAxis mouse modes, set zAxis as r3d default.
